# grpc-vacancy-load-test

./: .gitignore  LICENSE  README.md  pyproject.toml
grpc_vacancy_load_test/: locustfile.py  models.py
tests/: test_vacancy_test_user.py
